unpackaged/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/Configuration_Attribute_Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Attribute_Ext_Id__c</fullName>
    <externalId>true</externalId>
    <label>Configuration Attribute Ext Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>