unpackaged/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__AppliedImmediately__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AppliedImmediately__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that indicates changes to this configuration attribute should apply immediately.</description>
    <inlineHelpText>Sélectionnez la case pour appliquer immédiatement les modifications à cette option. À utiliser avec précaution afin d&#39;éviter de ralentir l&#39;expérience utilisateur.</inlineHelpText>
    <label>Apply Immediately</label>
    <type>Checkbox</type>
</CustomField>