unpackaged/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__ApplyToProductOptions__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ApplyToProductOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply configuration attribute selection to product options.</description>
    <inlineHelpText>Sélectionnez la case pour appliquer la sélection d&#39;attributs de configuration aux options produit.</inlineHelpText>
    <label>Apply To Product Options</label>
    <type>Checkbox</type>
</CustomField>