unpackaged/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__AutoSelect__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AutoSelect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the value of this attribute when adding a product from a Dynamic Feature using the value of the added product&#39;s matching field.</description>
    <inlineHelpText>Définissez la valeur de cet attribut lors de l&#39;ajout d&#39;un produit à partir d&#39;une fonctionnalité dynamique en utilisant la valeur du champ de correspondance du produit ajouté.</inlineHelpText>
    <label>Auto-Select</label>
    <type>Checkbox</type>
</CustomField>