unpackaged/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__ColumnOrder__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ColumnOrder__c</fullName>
    <description>Columns are comprised of a picklist (of 1, 2, or 3) for each Configuration Attribute. A maximum of 3 columns is allowed.</description>
    <inlineHelpText>Les colonnes sont composées d&#39;une liste de sélection (1, 2 ou 3) pour chaque attribut de configuration. Trois colonnes maximum sont autorisées.</inlineHelpText>
    <label>Column Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>