unpackaged/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__Hidden__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If flagged as hidden, the Configuration Attribute will not appear on the Product Configurator Page.</description>
    <inlineHelpText>S&#39;il est défini sur masqué, l&#39;attribut de configuration n&#39;est pas affiché dans la page du configurateur du produit.</inlineHelpText>
    <label>Hidden</label>
    <type>Checkbox</type>
</CustomField>