unpackaged/main/default/objects/SBQQ__ConfigurationAttribute__c/fields/SBQQ__HiddenValues__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__HiddenValues__c</fullName>
    <description>Values from the backing picklist field that should be hidden on this bundle.</description>
    <inlineHelpText>Saisissez les valeurs du champ de liste de sélection correspondant dans l&#39;objet Option produit que vous souhaitez masquer dans cette offre groupée.</inlineHelpText>
    <label>Hidden Values</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>